# fmi-bd2cmake

./: .gitignore  PYPI_PUBLISHING.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
fmi_bd2cmake/: cli.py  generator.py
fmi_bd2cmake.egg-info/: PKG-INFO  SOURCES.txt
test_advanced/: CMakeLists.txt
test_advanced/sources/: buildDescription.xml  main.c  utils.c
test_cpp/sources/: buildDescription.xml  helper.cpp  model.cpp
test_example/: CMakeLists.txt
test_example/sources/: buildDescription.xml  model_DANA_modified_extraction_76122067_49_ds.c
test_fmi3/sources/: buildDescription.xml  fmi3_model.c
test_minimal/sources/: buildDescription.xml  minimal.c
